<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:padding="@dimen/twentyFour"
    android:scrollbarSize="@dimen/four"
    android:scrollbarThumbVertical="@android:color/darker_gray">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twoFiftySix"
        android:paddingTop="@dimen/eight"
        android:text="@string/name"
        android:textColor="@android:color/white"
        android:textSize="@dimen/fourteen"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/four"
        android:backgroundTint="@android:color/white"
        android:hint="@string/text_name"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/white"
        android:textColorHint="@color/colorAccent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/four"
        android:text="@string/email"
        android:textColor="@android:color/white"
        android:textSize="@dimen/fourteen"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/four"
        android:backgroundTint="@android:color/white"
        android:hint="@string/text_hint_email"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/white"
        android:textColorHint="@color/colorAccent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/four"
        android:text="@string/pass"
        android:textColor="@android:color/white"
        android:textSize="@dimen/fourteen"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/four"
        android:backgroundTint="@android:color/white"
        android:fontFamily="sans-serif"
        android:hint="@string/text_hint_password"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textColorHint="@color/colorAccent" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/four"
        android:background="@drawable/shape"
        android:padding="@dimen/eight"
        android:text="@string/text_login"
        android:textColor="@android:color/white"
        android:textSize="@dimen/eighteen" />

</LinearLayout>